deploy/simulator-namespace.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocp-sim
  namespace: ocp-sim
  labels:
    app: ocp-sim
    app.kubernetes.io/managed-by: picoshift-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocp-sim
  template:
    metadata:
      labels:
        app: ocp-sim
        app.kubernetes.io/managed-by: picoshift-namespace
    spec:
      serviceAccountName: ocp-sim
      containers:
        - name: ocp-sim
          image: ghcr.io/jctanner/picoshift/ocp-sim:latest
          imagePullPolicy: Always
          args:
            - "--proxy"
            - "--proxy-port"
            - "80"
            - "--users-file"
            - "/etc/ocp-sim/users.yaml"
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 8443
              name: webhook
              protocol: TCP
            - containerPort: 9443
              name: oauth
              protocol: TCP
          volumeMounts:
            - name: users-config
              mountPath: /etc/ocp-sim
              readOnly: true
      volumes:
        - name: users-config
          configMap:
            name: ocp-sim-users
---
apiVersion: v1
kind: Service
metadata:
  name: ocp-sim
  namespace: ocp-sim
  labels:
    app: ocp-sim
    app.kubernetes.io/managed-by: picoshift-namespace
spec:
  selector:
    app: ocp-sim
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: webhook
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: oauth
      port: 9443
      targetPort: 9443
      protocol: TCP
