deploy/sklearn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sklearn-linear
  namespace: opendatahub
  labels:
    app: sklearn-linear
spec:
  parentRefs:
  - name: data-science-gateway
    namespace: openshift-ingress
  rules:
  - backendRefs:
    - name: sklearn-linear-predictor
      namespace: project1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /v1/models/sklearn-linear
  - backendRefs:
    - name: sklearn-linear-predictor
      namespace: project1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /v2/models/sklearn-linear
